# opengl_learn

./: CMakeLists.txt
opengl_learn/: CMakeLists.txt
opengl_learn/include/: camera_gl.h  common.h  light_server.h  model_loader.h  model_mesh.h  shader_loader.h  texture_loader.h  vertex_shape.h  zz_backup.h
opengl_learn/shader/: fragmentsh01.fs  mix.xs  vertexsh01.vs
opengl_learn/src/: camera_gl.cpp  common.cpp  compare.cpp  mian.cpp  model_loader.cpp  model_mesh.cpp  shader_loader.cpp  texture_loader.cpp
